Only activate on Python

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "Other"
     ],
     "activationEvents": [
-        "*"
+        "onLanguage:python"
     ],
     "contributes": {
         "configuration": {
