--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
                     "type": "string",
                     "default": "",
                     "description": "Sourcery token"
+                },
+                "sourcery.metricsEnabled": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Show code metrics in the editor."
                 }
             }
         }
