--- a/package.json
+++ b/package.json
@@ -1,64 +1,79 @@
 {
-    "name": "sourcery",
-    "displayName": "Sourcery",
-    "description": "Refactor Python instantly with Sourcery",
-    "author": "Sourcery AI",
-    "repository": "https://github.com/sourcery-ai/sourcery-vscode",
-    "bugs": {
-        "url": "https://github.com/sourcery-ai/public/issues"
-    },
-    "license": "MIT",
-    "version": "0.8.0",
-    "sourceryVersion": "0.8.0",
-    "publisher": "sourcery",
-    "icon": "sourcery-icon.png",
-    "keywords": [
-        "Python",
-        "refactoring"
+  "name": "sourcery",
+  "displayName": "Sourcery",
+  "description": "Refactor Python instantly with Sourcery",
+  "author": "Sourcery AI",
+  "repository": "https://github.com/sourcery-ai/sourcery-vscode",
+  "bugs": {
+    "url": "https://github.com/sourcery-ai/public/issues"
+  },
+  "license": "MIT",
+  "version": "0.8.0",
+  "sourceryVersion": "0.8.0",
+  "publisher": "sourcery",
+  "icon": "sourcery-icon.png",
+  "keywords": [
+    "Python",
+    "refactoring"
+  ],
+  "engines": {
+    "vscode": "^1.30.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "workspaceContains:*.py"
+  ],
+  "contributes": {
+    "commands": [
+      {
+        "command": "sourcery.refactor.workspace",
+        "title": "Scan with Sourcery",
+        "category": "Sourcery"
+      }
     ],
-    "engines": {
-        "vscode": "^1.30.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [
-        "onLanguage:python"
-    ],
-    "contributes": {
-        "configuration": {
-            "title": "Sourcery Configuration",
-            "type": "object",
-            "properties": {
-                "sourcery.token": {
-                    "type": "string",
-                    "default": "",
-                    "description": "Sourcery token"
-                },
-                "sourcery.metricsEnabled": {
-                    "type": "boolean",
-                    "default": true,
-                    "description": "Show code metrics in the editor."
-                }
-            }
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "sourcery.refactor.workspace",
+          "group": "1_modification"
         }
+      ]
     },
-    "main": "./out/extension",
-    "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance $VSCODE --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*"
-    },
-    "devDependencies": {
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^12.11.7",
-        "@types/vscode": "^1.30.0",
-        "mocha": "^7.0.0",
-        "tslint": "^6.1.0",
-        "typescript": "^3.8.3",
-        "vscode-test": "^1.3.0"
-    },
-    "dependencies": {
-        "vscode-languageclient": "^5.2.1"
+    "configuration": {
+      "title": "Sourcery Configuration",
+      "type": "object",
+      "properties": {
+        "sourcery.token": {
+          "type": "string",
+          "default": "",
+          "description": "Sourcery token"
+        },
+        "sourcery.metricsEnabled": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show code metrics in the editor."
+        }
+      }
     }
+  },
+  "main": "./out/extension",
+  "scripts": {
+    "vscode:prepublish": "tsc -p ./",
+    "compile": "tsc -watch -p ./",
+    "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance $VSCODE --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*"
+  },
+  "devDependencies": {
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.11.7",
+    "@types/vscode": "^1.30.0",
+    "mocha": "^7.0.0",
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3",
+    "vscode-test": "^1.3.0"
+  },
+  "dependencies": {
+    "vscode-languageclient": "^5.2.1"
+  }
 }
