activate on python file open or startup finished

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "Other"
   ],
   "activationEvents": [
-    "workspaceContains:*.py"
+    "onLanguage:python",
+    "onStartupFinished"
   ],
   "contributes": {
     "commands": [
