--- a/package.json
+++ b/package.json
@@ -86,6 +86,11 @@
           "type": "boolean",
           "default": true,
           "description": "Show code metrics in the editor."
+        },
+        "sourcery.ignored": {
+          "type": "string",
+          "default": "",
+          "description": "Never show me these refactorings"
         }
       }
     }
