--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-binaries/**/sourcery* filter=lfs diff=lfs merge=lfs -text
+sourcery_binaries/install/**/sourcery* filter=lfs diff=lfs merge=lfs -text
