--- a/package.json
+++ b/package.json
@@ -63,14 +63,14 @@
       ],
       "commandPalette": [
         {
-            "command": "sourcery.refactor.workspace",
-            "when": "false"
+          "command": "sourcery.refactor.workspace",
+          "when": "false"
         },
         {
-            "command": "sourcery.clones.workspace",
-            "when": "false"
+          "command": "sourcery.clones.workspace",
+          "when": "false"
         }
-    ]
+      ]
     },
     "configuration": {
       "title": "Sourcery Configuration",
@@ -94,15 +94,17 @@
     "vscode:prepublish": "tsc -p ./",
     "vscode:uninstall": "node ./out/uninstall",
     "compile": "tsc -watch -p ./",
-    "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance $VSCODE --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*"
+    "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance \"$VSCODE\" --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.30.0",
     "mocha": "^7.0.0",
+    "ovsx": "^0.2.0",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3",
+    "vsce": "^1.95.1",
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
