--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,8 +61,9 @@ jobs:
 
     - name: Publish VSCode extension
       run: |
-        yarn run vsce package -p ${{ secrets.VSCE_TOKEN }}
+        yarn run vsce package
 
+        # yarn run vsce publish -p ${{ secrets.VSCE_TOKEN }}
         # ovsx publish -p ${{ secrets.OPEN_VSX_TOKEN }}
 
     - name: Upload archive
