--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,6 +62,7 @@ jobs:
     - name: Publish VSCode extension
       run: |
         yarn run
+        ls node_modules
         yarn run vsce package
 
         # yarn run vsce publish -p ${{ secrets.VSCE_TOKEN }}
