--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,14 +8,11 @@ on:
         required: true
 
 jobs:
-  linux-build:
+  publish-vsix:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-      # TODO Remove
-      with:
-        ref: master
 
     - uses: actions/setup-node@v2
       with:
@@ -62,8 +59,8 @@ jobs:
     - name: Package and publish VSCode extension
       run: |
         yarn run vsce package
-        yarn run vsce publish -p ${{ secrets.VSCE_TOKEN }}
-        ovsx publish -p ${{ secrets.OPEN_VSX_TOKEN }}
+        # yarn run vsce publish -p ${{ secrets.VSCE_TOKEN }}
+        # yarn run ovsx publish -p ${{ secrets.OPEN_VSX_TOKEN }}
 
     - name: Upload archive
       uses: actions/upload-artifact@v2
@@ -77,7 +74,7 @@ jobs:
         name: Sourcery ${{ github.event.inputs.version }}
         body: v${{ github.event.inputs.version }}
         prerelease: false
-        artifacts: sourcery-${{ github.event.inputs.version }}-vsix
+        artifacts: sourcery-${{ github.event.inputs.version }}.vsix
         artifactContentType: raw
         artifactErrorsFailBuild: true
         token: ${{ secrets.GITHUB_TOKEN }}
