Fix publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,8 +59,8 @@ jobs:
     - name: Package and publish VSCode extension
       run: |
         yarn run vsce package
-        # yarn run vsce publish -p ${{ secrets.VSCE_TOKEN }}
-        # yarn run ovsx publish -p ${{ secrets.OPEN_VSX_TOKEN }}
+        yarn run vsce publish -p ${{ secrets.VSCE_TOKEN }}
+        yarn run ovsx publish -p ${{ secrets.OPEN_VSX_TOKEN }}
 
     - name: Upload archive
       uses: actions/upload-artifact@v2
