--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "ovsx": "^0.2.0",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3",
+    "version-bump-prompt": "^6.1.0",
     "vsce": "^1.95.1",
     "vscode-test": "^1.3.0"
   },
