Sourcery token: add links to the dashboard
Add a text with the dashboard's URL to:

* the input box for the Sourcery token (shown after the installation)
* the description of the setting Sourcery token

welcome-to-sourcery.py

* Change the link: VSCode install => Dashboard
* old docs => new docs

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
         "sourcery.token": {
           "type": "string",
           "default": "",
-          "description": "Sourcery token"
+          "description": "Sourcery token. You can find your token at https://sourcery.ai/dashboard"
         },
         "sourcery.metricsEnabled": {
           "type": "boolean",
