--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "refactoring"
   ],
   "engines": {
-    "vscode": "^1.30.0"
+    "vscode": "^1.40.0"
   },
   "categories": [
     "Other"
@@ -35,6 +35,11 @@
       {
         "command": "sourcery.clones.workspace",
         "title": "Detect clones",
+        "category": "Sourcery"
+      },
+      {
+        "command": "sourcery.suggestions.toggle",
+        "title": "Toggle Suggestion Mode",
         "category": "Sourcery"
       }
     ],
@@ -99,7 +104,7 @@
   "devDependencies": {
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.11.7",
-    "@types/vscode": "^1.30.0",
+    "@types/vscode": "^1.49.0",
     "mocha": "^7.0.0",
     "ovsx": "^0.2.0",
     "tslint": "^6.1.0",
@@ -109,6 +114,6 @@
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
-    "vscode-languageclient": "^5.2.1"
+    "vscode-languageclient": "^7.0.0"
   }
 }
