--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
         "command": "sourcery.clones.workspace",
         "title": "Detect clones",
         "category": "Sourcery"
+      },
+      {
+        "command": "sourcery.level.toggle",
+        "title": "Toggle Sourcery Recommendation Level",
+        "category": "Sourcery"
       }
     ],
     "submenus": [
