--- a/package.json
+++ b/package.json
@@ -36,11 +36,6 @@
         "command": "sourcery.clones.workspace",
         "title": "Detect clones",
         "category": "Sourcery"
-      },
-      {
-        "command": "sourcery.level.toggle",
-        "title": "Toggle Sourcery Recommendation Level",
-        "category": "Sourcery"
       }
     ],
     "submenus": [
@@ -96,10 +91,10 @@
           "default": true,
           "description": "Show suggestions."
         },
-        "sourcery.ruleType.reviewComments": {
+        "sourcery.ruleType.comments": {
           "type": "boolean",
           "default": true,
-          "description": "Show review comments."
+          "description": "Show comments."
         },
         "sourcery.metricsEnabled": {
           "type": "boolean",
