--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
     "vscode:prepublish": "tsc -p ./",
     "vscode:uninstall": "node ./out/uninstall",
     "compile": "tsc -watch -p ./",
-    "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance \"$VSCODE\" --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*"
+    "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance \"$VSCODE\" --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*",
+    "vscode_local": "SOURCERY_EXECUTABLE=../core/run-sourcery.sh yarn run vscode"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
