--- a/package.json
+++ b/package.json
@@ -34,25 +34,66 @@
                 "when": "workspacePlatform != webworker",
                 "steps": [
                   {
-                    "id": "sourcery.welcomeFile",
-                    "title": "Open our sample file",
-                    "description": "Open our sample file to try out Sourcery.\n[Open welcome file](command:toSide:sourcery.welcome.open)\n",
+                    "id": "sourcery.openWelcomeFile",
+                    "title": "Get your first recommendation",
+                    "description": "Get started by opening our tutorial \n[Open tutorial](command:toSide:sourcery.welcome.open)\n Put the cursor over the underlined code to see the refactoring suggestion. \n You can see all Sourcery's recommendations in the [Problems Pane](command:workbench.actions.view.problems)",
                     "media": {
                             "markdown": "welcome-to-sourcery.md"
                         },
                     "command": "sourcery.welcome.open",
-                    "when": ""
+                    "when": "",
+                    "completionEvents": [
+                            "onCommand:sourcery.welcome.open"
+                        ]
                   },
                   {
-                    "id": "sourcery.acceptRule",
-                    "title": "Accept a suggestion",
-                    "description": "Hover over a suggestion, and take the quick fix code action to accept it",
+                    "id": "sourcery.acceptRecommendation",
+                    "title": "Accept your first recommendation",
+                    "description": "Put the cursor on an underline, then click the lightbulb or use the quick fix hotkey to show the code actions.\n Take the `Sourcery - Convert for loop into list comprehension` option to accept the change.\n",
                     "media": {
                             "markdown": "welcome-to-sourcery.md"
                         },
                     "when": "",
                     "completionEvents": [
-                            "onCommand:sourcery.refactoring.accept"
+                            "onContext:acceptRecommendationContextKey"
+                        ]
+                  },
+                  {
+                    "id": "sourcery.configuration",
+                    "title": "Configure Sourcery to your needs.",
+                    "description": "Create a configuration file in your project to customise Sourcery\n[Create config file](command:toSide:sourcery.config.open)\n ",
+                    "media": {
+                            "markdown": "tutorial.md"
+                        }
+                  },
+                  {
+                    "id": "sourcery.customRules2",
+                    "title": "Add custom rules",
+                    "description": "You can add your own custom rules to Sourcery!",
+                    "media": {
+                            "markdown": "welcome-to-sourcery.md"
+                        }
+                  },
+                  {
+                    "id": "sourcery.enterToken",
+                    "title": "Enter your token",
+                    "description": "Sign up for a Sourcery token to get a free trial of Sourcery Pro for 30 days\n[Sign up for token](https://sourcery.ai/signup)\n[Enter token](command:toSide:workbench.action.openSettings?\"sourcery\")",
+                    "media": {
+                            "markdown": "welcome-to-sourcery.md"
+                        },
+                    "completionEvents": [
+							"onSettingChanged:sourcery.token"
+						]
+                  },
+                  {
+                    "id": "sourcery.scanRefactorings",
+                    "title": "Do a scan for suggestions",
+                    "description": "Right click on a folder and choose 'Sourcery - Scan for refactorings' (requires Pro trial)",
+                    "media": {
+                            "markdown": "welcome-to-sourcery.md"
+                        },
+                    "completionEvents": [
+                            "onCommand:sourcery.refactor.workspace"
                         ]
                   }
                 ]
@@ -72,6 +113,11 @@
       {
         "command": "sourcery.welcome.open",
         "title": "Open welcome file",
+        "category": "Sourcery"
+      },
+      {
+        "command": "sourcery.config.open",
+        "title": "Open Sourcery configuration file",
         "category": "Sourcery"
       }
     ],
@@ -157,6 +203,6 @@
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
-    "vscode-languageclient": "^5.2.1"
+    "vscode-languageclient": "^6.1.4"
   }
 }
