--- a/package.json
+++ b/package.json
@@ -161,11 +161,13 @@
 			"sourcery.scans": [
 				{
 					"command": "sourcery.refactor.workspace",
-					"group": "1_modification@1"
+					"group": "1_modification@1",
+					"when": "resourceLangId == python || explorerResourceIsFolder"
 				},
 				{
 					"command": "sourcery.clones.workspace",
-					"group": "1_modification@2"
+					"group": "1_modification@2",
+					"when": "resourceLangId == python || explorerResourceIsFolder"
 				}
 			],
 			"commandPalette": [
