feat: Login from VSCode using `sourcery.login` command

--- a/package.json
+++ b/package.json
@@ -103,6 +103,11 @@
 		],
 		"commands": [
 			{
+				"command": "sourcery.login",
+				"title": "Login",
+				"category": "Sourcery"
+			},
+			{
 				"command": "sourcery.refactor.workspace",
 				"title": "Scan for refactorings",
 				"category": "Sourcery"
